--- a/Broadcast/Assets/Base.lproj/LaunchScreen.storyboard
+++ b/Broadcast/Assets/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,16 +14,43 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FMb-4l-Uk2">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ios-background-image" translatesAutoresizingMaskIntoConstraints="NO" id="FMb-4l-Uk2">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Chz-ws-Elh">
+                                <rect key="frame" x="64" y="365" width="247" height="82"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-boomday" translatesAutoresizingMaskIntoConstraints="NO" id="yYZ-RV-ke2">
+                                        <rect key="frame" x="0.0" y="0.0" width="247" height="40"/>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TbY-IL-7PT">
+                                        <rect key="frame" x="0.0" y="40" width="247" height="14"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="14" id="vFM-on-Xey"/>
+                                        </constraints>
+                                    </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-broadcaster" translatesAutoresizingMaskIntoConstraints="NO" id="UQF-pY-Mb3">
+                                        <rect key="frame" x="0.0" y="54" width="247" height="28"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="TQV-TJ-pz7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="TQV-TJ-pz7" firstAttribute="trailing" secondItem="FMb-4l-Uk2" secondAttribute="trailing" id="93O-UU-Du6"/>
+                            <constraint firstItem="FMb-4l-Uk2" firstAttribute="leading" secondItem="TQV-TJ-pz7" secondAttribute="leading" id="CCv-xa-Lav"/>
+                            <constraint firstItem="Chz-ws-Elh" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ITv-Ak-ZZy"/>
+                            <constraint firstItem="Chz-ws-Elh" firstAttribute="leading" secondItem="TQV-TJ-pz7" secondAttribute="leading" constant="64" id="gdH-tR-pEN"/>
+                            <constraint firstItem="TQV-TJ-pz7" firstAttribute="trailing" secondItem="Chz-ws-Elh" secondAttribute="trailing" constant="64" id="kMG-Hg-7ix"/>
+                            <constraint firstItem="Chz-ws-Elh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="mRT-SY-4w2"/>
+                            <constraint firstAttribute="bottom" secondItem="FMb-4l-Uk2" secondAttribute="bottom" id="o6j-4H-21s"/>
+                            <constraint firstItem="FMb-4l-Uk2" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="r34-r1-Ik5"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -32,6 +59,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ios-background-image" width="414" height="896"/>
+        <image name="logo-boomday" width="260" height="40"/>
+        <image name="logo-broadcaster" width="167" height="28"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
